deploy/service-dev.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: node-specific-sizing
subsets:
  - addresses:
      - ip: "172.19.0.1"
    ports:
      - port: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: node-specific-sizing
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
