deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-specific-sizing
  labels:
    app: node-specific-sizing
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app: node-specific-sizing
