deploy/mutatingadmissionwebhook.yaml
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: node-specific-sizing
  annotations:
    cert-manager.io/inject-ca-from: kube-system/node-specific-sizing-client-cert
webhooks:
  - name: node-specific-sizing.svc.cluster.local
    objectSelector:
      matchLabels:
        node-specific-sizing.manomano.tech/enabled: "true"
    admissionReviewVersions: [ "v1" ]
    sideEffects: None
    failurePolicy: Ignore
    timeoutSeconds: 2
    clientConfig:
      service:
        namespace: kube-system
        name: node-specific-sizing
        path: /mutate
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["CREATE"]
        scope: Namespaced
